--- a/.env
+++ b/.env
@@ -42,3 +42,8 @@ MAILER_TO_ADDRESS=
 ###< symfony/mailer ###
 
 STRIPE_SECRETKEY=
+###> karser/karser-recaptcha3-bundle ###
+# Get your API key and secret from https://g.co/recaptcha/v3
+RECAPTCHA3_KEY=my_site_key
+RECAPTCHA3_SECRET=my_secret
+###< karser/karser-recaptcha3-bundle ###
