--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/orm": "^2.15",
         "fakerphp/faker": "^1.23",
         "friendsofsymfony/ckeditor-bundle": "^2.4",
+        "karser/karser-recaptcha3-bundle": "^0.1.26",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.22",
         "stripe/stripe-php": "^12.2",
