--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ yarn-error.log
 ###< symfony/webpack-encore-bundle ###
 /public/uploads/images/pictures
 /private/uploads/books
+###> symfony/asset-mapper ###
+/public/assets/
+###< symfony/asset-mapper ###
