--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@hotwired/stimulus": "^3.2.2",
         "@popperjs/core": "^2.11.8",
+        "@symfony/stimulus-bridge": "^3.2.2",
         "ckeditor4": "^4.22.1",
         "jquery": "^3.7.0"
     }
