--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -16,3 +16,6 @@ vich_uploader:
         book_file:
             upload_destination: '%kernel.project_dir%/private/uploads/books'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+        annex_file:
+            upload_destination: '%kernel.project_dir%/private/uploads/annex'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
