--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,8 @@ parameters:
     upload_directory: '%kernel.project_dir%/public/uploads/images/pictures/'
     mailer_from: '%env(resolve:MAILER_FROM_ADDRESS)%'
     mailer_to: '%env(resolve:MAILER_TO_ADDRESS)%'
+    base_url: '%env(URL)%'
+    dkim_key: '%env(DKIM_KEY)%'
 
 services:
     # default configuration for services in *this* file
